# Chess-like

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  README.md  main.cpp
